implement user auth tests and functionality
